--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="estudoAngularNodeApp">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +9,17 @@
   <!-- Bootstrap -->
   <link href="..\node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body ng-controller="EstudoController">
 
   <p>Nothing here {{'yet' + '!'}}</p>
+  <p>{{teste}}</p>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="..\node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
   <script src="..\node_modules\angular\angular.min.js"></script>
+  <script src=".\js\app.js"></script>
+  <script src=".\js\controllers\EstudoController.js"></script>
 </body>
 </html>
