--- a/app/index.html
+++ b/app/index.html
@@ -8,17 +8,38 @@
 
   <!-- Bootstrap -->
   <link href="..\node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href=".\css\app.css">
 </head>
 <body ng-controller="EstudoController">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Estudo</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#lista">Lista de clientes</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </nav>
 
-  <p>Nothing here {{'yet' + '!'}}</p>
-  <p>{{teste}}</p>
+  <div class="container" ng-view>
+  </div><!-- /.container -->
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="..\node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
   <script src="..\node_modules\angular\angular.min.js"></script>
+  <script src="..\node_modules\angular-route\angular-route.min.js"></script>
   <script src=".\js\app.js"></script>
   <script src=".\js\controllers\EstudoController.js"></script>
 </body>
