--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <link href="..\node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href=".\css\app.css">
 </head>
-<body ng-controller="EstudoController">
+<body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
@@ -20,12 +20,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Estudo</a>
+        <a class="navbar-brand" href="#home">Estudo</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#lista">Lista de clientes</a></li>
+          <li class="active"><a href="#home">Home</a></li>
+          <li><a href="#clientes">Lista de clientes</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -41,6 +41,7 @@
   <script src="..\node_modules\angular\angular.min.js"></script>
   <script src="..\node_modules\angular-route\angular-route.min.js"></script>
   <script src=".\js\app.js"></script>
-  <script src=".\js\controllers\EstudoController.js"></script>
+  <script src=".\js\controllers\ClienteController.js"></script>
+  <script src=".\js\controllers\HomeController.js"></script>
 </body>
 </html>
