--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <title>Listagem de clientes</title>
 
   <!-- Bootstrap -->
-  <link href="..\node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
+  <link href=".\static\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href=".\css\app.css">
 </head>
 <body>
@@ -37,9 +37,9 @@
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="..\node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
-  <script src="..\node_modules\angular\angular.min.js"></script>
-  <script src="..\node_modules\angular-route\angular-route.min.js"></script>
+  <script src=".\static\bootstrap\dist\js\bootstrap.min.js"></script>
+  <script src=".\static\angular\angular.min.js"></script>
+  <script src=".\static\angular-route\angular-route.min.js"></script>
   <script src=".\js\app.js"></script>
   <script src=".\js\controllers\ClienteController.js"></script>
   <script src=".\js\controllers\HomeController.js"></script>
