Consumindo serviço de clientes

--- a/app/index.html
+++ b/app/index.html
@@ -40,8 +40,10 @@
   <script src=".\static\bootstrap\dist\js\bootstrap.min.js"></script>
   <script src=".\static\angular\angular.min.js"></script>
   <script src=".\static\angular-route\angular-route.min.js"></script>
+  <script src=".\static\angular-resource\angular-resource.min.js"></script>
   <script src=".\js\app.js"></script>
   <script src=".\js\controllers\ClienteController.js"></script>
   <script src=".\js\controllers\HomeController.js"></script>
+  <script src=".\js\service\clienteService.js"></script>
 </body>
 </html>
