--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,6 @@
   <script src=".\js\app.js"></script>
   <script src=".\js\controllers\ClienteController.js"></script>
   <script src=".\js\controllers\HomeController.js"></script>
-  <script src=".\js\service\clienteService.js"></script>
+  <script src=".\js\services\clienteService.js"></script>
 </body>
 </html>
